# course-jenkins-project

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-Code-Quality  Jenkinsfile-Release  Jenkinsfile-deployment  acceptance-test.js  iam-policy.json  index.html  jenkins-backup  jenkinsfile-deployment  pyproject.toml  steps.sh  test.toml
01-jenkins-basics/: Jenkinsfile  tasks.txt  test.txt  test_app.py
01-jenkins-basics/templates/: index.html
02-single-server-deployment/: Jenkinsfile  app.py
02-single-server-deployment/templates/: index.html
03-lambda-deployment/lambda-app/hello_world/: app.py
03-lambda-deployment/lambda-app/tests/unit/: test_handler.py
04-docker/: Dockerfile  requirements.txt
04-docker/templates/: index.html
05-kubernetes/: Jenkinsfile
05-kubernetes/k8s/: service.yaml
06-advanced-project/: Jenkinsfile-Code-Quality  Jenkinsfile-Release  pyproject.toml
06-advanced-project/k8s/: deployment.yaml
k8s/: deployment.yaml
lambda-app/: samconfig.toml  template.yaml
lambda-app/hello_world/: app.py
templates/: index.html
