[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["sanjeev <sanjeev@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.3"
pytest = "^8.3.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
